# mini-proteins

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-ml.txt
benchmark/: __init__.py  certify.py  curate.py  features.py  observables.py  run_shakeout.sh  run_shakeout_curated.sh  simulate.py  systems.py
config/: md_langevin.mdp  minim.mdp  npt_langevin.mdp  nvt_langevin.mdp
docs/: benchmark.md  cloud-run.md  status.md
results/: README.md
results/ala/: ff03_crosscheck.md  validation.json  validation.txt
results/ala/explicit/: curation.json  curation.txt
results/ala/implicit/: curation.json  curation.txt
results/gly/explicit/: curation.json  curation.txt
results/gly/implicit/: curation.json  curation.txt
results/pro/explicit/: curation.json  curation.txt
results/pro/implicit/: curation.json  curation.txt
scripts/: 0_preprocess.sh  1_equil.sh  2_md_lang.sh  3_post.sh  4_analyze.sh  _ff03_compare.py  _gen_bench_readme.py  analyze.py  bench.sh  plot.py  pull_results.sh  run.sh
